--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -773,6 +773,7 @@
   "Custom header": "Entête personnalisé",
   "api.custom.header.help": "Utiliser {{title}} pour inserer le nom de l'API, {{ description }} pour la petite description. Ajouter la classe \"btn-edit\" pour créer un lien vers la page d'edition de l'API",
   "get.apikey.requires.login": "Obtenir une clé d'API nécessite que vous soyez connecté",
+  "consume.apikey": "Consommer une API",
   "Mongo migration": "Migration de MongoDB vers Postgres",
   "migration in progress ...": "migration en cours ...",
   "migrate database": "migrer la base",
@@ -887,5 +888,7 @@
   "team_member.refuse_invitation": "Refuser",
   "team_member.has_joined": "Vous avez rejoint l'équipe",
   "team_member.missing_token": "Jeton manquant",
-  "login_page.register_message": "Nouveau sur %s ?"
+  "login_page.register_message": "Nouveau sur %s ?",
+  "Register": "S'inscrire",
+  "api_data.missing": "%s est manquant(es) pour cette api."
 }
