--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -890,5 +890,10 @@
   "team_member.missing_token": "Jeton manquant",
   "login_page.register_message": "Nouveau sur %s ?",
   "Register": "S'inscrire",
-  "api_data.missing": "%s est manquant(es) pour cette api."
+  "api_data.missing": "%s est manquant(es) pour cette api.",
+  "api_redoc.guest_user": "L'api reference est uniquement disponible pour les utilisateurs connectés.",
+  "api_redoc.failed_to_retrieve_doc": "Une erreur est survenue lors la récupération de l'api référence.",
+  "api_swagger.failed_to_retrieve_swagger": "Can't retrieve api reference",
+  "api_swagger.try_it_error": "Le Try it n'est pas activé sur cette api.",
+  "api_swagger.guest_user": "Le Try it est uniquement disponible pour les utilisateurs connectés."
 }
