--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -890,5 +890,10 @@
     "team_member.missing_token": "Missing token",
     "login_page.register_message" : "New to %s ?",
     "Register": "Register",
-    "api_data.missing": "%s is missing for this api."
+    "api_data.missing": "%s is missing for this api.",
+    "api_redoc.guest_user": "The api reference is only available for registered users.",
+    "api_redoc.failed_to_retrieve_doc": "An error occurred while retrieving the API reference",
+    "api_swagger.failed_to_retrieve_swagger": "Can't retrieve api reference",
+    "api_swagger.try_it_error": "Try it is not enabled on this api.",
+    "api_swagger.guest_user": "Try it is only available for registered users."
 }
