--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -888,7 +888,7 @@
     "team_member.refuse_invitation": "Refuse",
     "team_member.has_joined": "You're now in the team",
     "team_member.missing_token": "Missing token",
-    "login_page.register_message" : "New to %s ?",
+    "login_page.register_message": "New to %s ?",
     "Register": "Register",
     "api_data.missing": "%s is missing for this api.",
     "api_redoc.guest_user": "The api reference is only available for registered users.",
@@ -897,5 +897,7 @@
     "api_swagger.try_it_error": "Try it is not enabled on this api.",
     "api_swagger.guest_user": "Try it is only available for registered users.",
     "smtp_client.host": "The SMTP server to connect to",
-    "smtp_client.port": "The SMTP server port to connect to"
+    "smtp_client.port": "The SMTP server port to connect to",
+    "send_grid.api_key": "Api Key",
+    "send_grid.from_email": "Sender email"
 }
