--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -904,5 +904,6 @@
   "Authorized entities": "Authorized entities",
   "Authorized.entities.placeholder": "Selectionnez les service groupes de services et/ou les services Otoroshi",
   "authorized.entities.help": "Selectionnez les service groupes de services et/ou les services Otoroshi pour lesquels la clé d'API sera authorizée d'y accéder",
-  "apikey_select_modal.title": "Récupération d'une api key"
+  "apikey_select_modal.title": "Récupération d'une api key",
+  "apikey_select_modal.of_team": "Api key de l'équipe"
 }
