--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -904,5 +904,6 @@
     "Authorized entities": "Authorized entities",
     "Authorized.entities.placeholder": "Select Otoroshi service groups and/or services",
     "authorized.entities.help": "Select otoroshi service groups and/or services on which the key is authorized",
-    "apikey_select_modal.title": "Get an api key"
+    "apikey_select_modal.title": "Get an api key",
+    "apikey_select_modal.of_team": "Api key of team"
 }
