Aggregate api key can be separate and finally unique

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -911,5 +911,7 @@
     "aggregation api keys security": "Aggregation api keys security",
     "aggregation_apikeys.security.help": "Enable the possibility to use an api key on multiple apis",
     "aggregation.api_key.security.notification": "You're enabled the aggregation of api keys. It's an advanced usage of the api keys.",
-    "I understood": "I understood"
+    "I understood": "I understood",
+    "team_apikey_for_api.make_unique": "Make unique",
+    "team_apikey_for_api.ask_for_make_unique": "Are you sure to make this api key unique and separate from his parent plan ?"
 }
