--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -903,7 +903,6 @@
     "audittrail.export.label": "Export audit trail",
     "Authorized entities": "Authorized entities",
     "Authorized.entities.placeholder": "Select Otoroshi service groups and/or services",
-    "authorized.entities.help": "Select otoroshi service groups and/or services on which the key is authorized",
     "teamapi.new_version": "Create a new version",
     "authorized.entities.help": "Select otoroshi service groups and/or services on which the key is authorized",
     "apikey_select_modal.title": "Get an api key",
@@ -915,5 +914,6 @@
     "aggregation.api_key.security.notification": "You're enabled the aggregation of api keys. It's an advanced usage of the api keys. Keep in mind that the metadatas and the quotas will be shared between the parent api key and his aggregate api keys. Daikoku will not apply any control when conflict metadata.",
     "I understood": "I understood",
     "team_apikey_for_api.make_unique": "Make unique",
-    "team_apikey_for_api.ask_for_make_unique": "Are you sure to make this api key unique and separate from his parent plan ?"
+    "team_apikey_for_api.ask_for_make_unique": "Are you sure to make this api key unique and separate from his parent plan ?",
+    "team_api_info.isDefault": "Use as latest version"
 }
