--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -443,7 +443,8 @@
     "Cost per req.": "Cost per req.",
     "Cost per request": "Cost per request",
     "delete.plan.confirm": "Are you sure you want to delete this plan ?",
-    "add a new plan": "add a new plan",
+    "add a new plan": "New plan",
+    "import a plan": "Import a plan",
     "Make default plan": "Make default plan",
     "Make it private": "Make it private",
     "Make it public": "Make it public",
@@ -915,5 +916,6 @@
     "I understood": "I understood",
     "team_apikey_for_api.make_unique": "Make unique",
     "team_apikey_for_api.ask_for_make_unique": "Are you sure to make this api key unique and separate from his parent plan ?",
-    "team_api_info.isDefault": "Use as latest version"
+    "team_api_info.isDefault": "Use as latest version",
+    "api_select_modal.title": "Choose your plan"
 }
