improve internationalization view

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -917,5 +917,34 @@
     "team_apikey_for_api.ask_for_make_unique": "Are you sure to make this api key unique and separate from his parent plan ?",
     "team_api_info.isDefault": "Use as latest version",
     "api_select_modal.title": "Choose your plan",
-    "internationalization": "Internationalization"
+    "internationalization": "Internationalization",
+    "mail.contact.title": "Contact request",
+    "mail.contact.sender": "Resume of contact mail",
+    "mail.contact.contact": "Somebody send you a contact request",
+    "mail.apikey.rotation.title": "Your apikey have been updated",
+    "mail.apikey.rotation.body": "Your apikey for api [apiName] and plan [planName] have been rotated.",
+    "mail.apikey.refresh.title": "Your apikey have been updated",
+    "mail.apikey.refresh.body": "Your apikey for api [apiName] and plan [planName] have been updated.",
+    "mail.apikey.demand.title": "Somebody want an apikey",
+    "mail.apikey.demand.body": "[user] want an apikey for [apiName].",
+    "mail.api.access.title": "Somebody want to access your api",
+    "mail.api.access.body": "[user] want to join your team [teamName].",
+    "mail.team.access.title": "Somebody want to join your team",
+    "mail.team.access.body": "[user] want to join your team [teamName].",
+    "mail.team.invitation.title": "Somebody want to invit you in his team",
+    "mail.team.invitation.body": "[user], as admin of [teamName], wants you to join his team.",
+    "mail.rejection.title": "Your Daikoku request has been rejected.",
+    "mail.acceptation.title": "Your Daikoku request has been accepted.",
+    "mail.api.access.rejection.body": "Your request to access to api [apiName] has been rejected.",
+    "mail.api.access.acceptation.body": "The request to access to api [apiName] by [user] has been accepted.",
+    "mail.api.subscription.rejection.body": "Your request for an apikey for [apiName] has been rejected.",
+    "mail.api.subscription.acceptation.body": "The request of [user] for an apikey for [apiName] has been accepted.",
+    "mail.team.access.rejection.body": "Your request to join the team [teamName] has been rejected.",
+    "mail.team.access.acceptation.body": "Your request to access to team [teamName] has been accepted.",
+    "mail.user.invitation.rejection.body": "[user] rejected your request to join your team [teamName].",
+    "mail.user.invitation.acceptation.body": "[user] accepted your request to join your team [teamName].",
+    "mail.new.message.title": "New message from [user]",
+    "mail.new.message.body": "You''ve got a new message",
+    "mail.new.user.title": "Validate your [tenant] account",
+    "mail.new.user.body": "Thanks for creating your [tenant] account, you're almost done."
 }
