--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -919,5 +919,6 @@
     "api_select_modal.title": "Choose your plan",
     "request_api_access": "You need to be authorized to view this api.",
     "request_already_pending": "Your request is already pending",
-    "go_back": "Go back"
+    "go_back": "Go back",
+    "guest_user_not_allowed": "You need to be authenticated to access at this api"
 }
