--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -950,5 +950,8 @@
     "mail.new.message.title": "New message from [user]",
     "mail.new.message.body": "You've got a new message",
     "mail.new.user.title": "Validate your [tenant] account",
-    "mail.new.user.body": "Thanks for creating your [tenant] account, you're almost done."
+    "mail.new.user.body": "Thanks for creating your [tenant] account, you're almost done.",
+    "mailing_internalization.missing_translations": "Edition of all front office text will be available in next version",
+    "mailing_internalization.message_text": "Message text",
+    "mailing_internalization.required_variables": "Required variables"
 }
