--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -950,5 +950,8 @@
   "mail.new.message.title": "Nouveau message de [user]",
   "mail.new.message.body": "Vous avez un nouveau message",
   "mail.new.user.title": "Validation de votre compte sur le tenant [tenant]",
-  "mail.new.user.body": "Merci d'avoir créer un compte sur [tenant], vous y êtes presque."
+  "mail.new.user.body": "Merci d'avoir créer un compte sur [tenant], vous y êtes presque.",
+  "mailing_internalization.missing_translations": "L'édition des traductions du front office sera disponible dans une future version.",
+  "mailing_internalization.message_text": "Description du message",
+  "mailing_internalization.required_variables": "Variables requises"
 }
