--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -953,5 +953,7 @@
   "mail.new.user.body": "Merci d'avoir créer un compte sur [tenant], vous y êtes presque.",
   "mailing_internalization.missing_translations": "L'édition des traductions du front office sera disponible dans une future version.",
   "mailing_internalization.message_text": "Description du message",
-  "mailing_internalization.required_variables": "Variables requises"
+  "mailing_internalization.required_variables": "Variables requises",
+  "mailing_internalization.translation_updated": "Traduction sauvegardée",
+  "mailing_internalization.failed_translation_update": "Une erreur esr survenue lors de la mise à jour des traductions"
 }
