translate so text

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -955,5 +955,9 @@
     "mailing_internalization.message_text": "Message text",
     "mailing_internalization.required_variables": "Required variables",
     "mailing_internalization.translation_updated": "Translation updated",
-    "mailing_internalization.failed_translation_update": "Failed to save translation"
+    "mailing_internalization.failed_translation_update": "Failed to save translation",
+    "mailing_internalization.mail_tab": "Mail",
+    "mailing_internalization.mail_template_tab": "Mail template",
+    "mailing_internalization.front_office_tab": "Front office",
+    "mailing_internalization.go_to_edit_template": "Edit mail template"
 }
