--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -955,5 +955,9 @@
   "mailing_internalization.message_text": "Description du message",
   "mailing_internalization.required_variables": "Variables requises",
   "mailing_internalization.translation_updated": "Traduction sauvegardée",
-  "mailing_internalization.failed_translation_update": "Une erreur esr survenue lors de la mise à jour des traductions"
+  "mailing_internalization.failed_translation_update": "Une erreur esr survenue lors de la mise à jour des traductions",
+  "mailing_internalization.mail_tab": "Mail",
+  "mailing_internalization.mail_template_tab": "Modèle de mail",
+  "mailing_internalization.front_office_tab": "Autres pages",
+  "mailing_internalization.go_to_edit_template": "Editer le modèle de mails"
 }
