add new translation method

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -959,5 +959,7 @@
     "mailing_internalization.mail_tab": "Mail",
     "mailing_internalization.mail_template_tab": "Mail template",
     "mailing_internalization.front_office_tab": "Front office",
-    "mailing_internalization.go_to_edit_template": "Edit mail template"
+    "mailing_internalization.go_to_edit_template": "Edit mail template",
+    "tenant_edit.translation_mode_message": "You can now navigate and edit all elements just by hovering it",
+    "Translation mode enabled": "Translation mode enabled"
 }
