--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -959,5 +959,7 @@
   "mailing_internalization.mail_tab": "Mail",
   "mailing_internalization.mail_template_tab": "Modèle de mail",
   "mailing_internalization.front_office_tab": "Autres pages",
-  "mailing_internalization.go_to_edit_template": "Editer le modèle de mails"
+  "mailing_internalization.go_to_edit_template": "Editer le modèle de mails",
+  "tenant_edit.translation_mode_message": "Vous pouvez à présent naviguer sur les pages et survoler chaque élement pour modifier leur texte",
+  "Translation mode enabled": "Mode traduction activé"
 }
