Signup page & reset password

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -513,7 +513,7 @@
     "Tenant updated successfully": "Tenant updated successfully",
     "Confirm password": "Confirm password",
     "Create account": "Create account",
-    "account.creation.error": "Your account creation request is not valid anymore (it's only valid for 15 minutes). Please creates a new request.",
+    "account.creation.error.not.valid.anymore": "Your account creation request is not valid anymore (it's only valid for 15 minutes). Please creates a new request.",
     "create.account.done": "You will receive an email at %s to finish your account creation process. You will have 15 minutes from now to finish your account creation process.",
     "Missing informations ...": "Missing informations ...",
     "password.match.error": "Your passwords does not match !",
@@ -522,7 +522,8 @@
     "Type your new password": "Type your new password",
     "Re-type your new password": "Re-type your new password",
     "Reset password": "Reset password",
-    "account.reset.error": "Your password reset request is not valid anymore (it's only valid for 15 minutes). Please creates a new request.",
+    "account.reset.error.not.valid.anymore": "Your password reset request is not valid anymore (it's only valid for 15 minutes). Please creates a new request.",
+    "account.reset.error.bad.creation.id": "Your password reset request is not valid. Please creates a new request.",
     "password.reset.done": "You will receive an email at %s to finish your passsword reset process. You will have 15 minutes from now to finish your password reset process.",
     "Create your account": "Create your account",
     "Reset your password": "Reset your password",
