--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -513,7 +513,7 @@
   "Tenant updated successfully": "Le tenant a été modifié avec succès",
   "Confirm password": "Confirmation mot de passe",
   "Create account": "Création d'un compte",
-  "account.creation.error": "Votre demande de création de compte n'est plus valide (elle n'est valable que pendant 15 minutes). S'il vous plaît crée une nouvelle demande.",
+  "account.creation.error.not.valid.anymore": "Votre demande de création de compte n'est plus valide (elle n'est valable que pendant 15 minutes). Merci de créer une nouvelle demande.",
   "create.account.done": "Vous recevrez un courriel à l'adresse %s pour terminer le processus de création de votre compte. Vous aurez 15 minutes pour terminer le processus de création de votre compte.",
   "Missing informations ...": "Informations manquantes ...",
   "password.match.error": "Vos mots de passe ne sont pas identiques !",
@@ -522,7 +522,8 @@
   "Type your new password": "Votre nouveau mot de passe",
   "Re-type your new password": "Confirmez votre nouveau mot de passe",
   "Reset password": "Réinitialisation du mot de passe",
-  "account.reset.error": "Votre demande de réinitialisation de mot de passe n'est plus valide (sa validité est limitée à 15 minutes). S'il vous plaît crée une nouvelle demande.",
+  "account.reset.error.not.valid.anymore": "Votre demande de réinitialisation de mot de passe n'est plus valide (sa validité est limitée à 15 minutes). Merci de créer une nouvelle demande.",
+  "account.reset.error.bad.creation.id": "Votre demande de réinitialisation de mot de passe n'est pas valide. Merci de créer une nouvelle demande.",
   "password.reset.done": "Vous recevrez un courrier électronique à l'adresse %s pour terminer le processus de réinitialisation de votre mot de passe. Vous aurez 15 minutes à partir de maintenant pour terminer votre processus de réinitialisation de mot de passe.",
   "Create your account": "Créer un compte",
   "Reset your password": "Réinitialisation votre mot de passe",
