--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -511,7 +511,7 @@
   "Private tenant": "Tenant privé",
   "tenant.created.success": "Le tenant %s a été créé avec succès",
   "Tenant updated successfully": "Le tenant a été modifié avec succès",
-  "Confirm password": "Confirmation mot de passe",
+  "Confirm password": "Mot de passe de confirmation",
   "Create account": "Création d'un compte",
   "account.creation.error.not.valid.anymore": "Votre demande de création de compte n'est plus valide (elle n'est valable que pendant 15 minutes). Merci de créer une nouvelle demande.",
   "create.account.done": "Vous recevrez un courriel à l'adresse %s pour terminer le processus de création de votre compte. Vous aurez 15 minutes pour terminer le processus de création de votre compte.",
@@ -826,15 +826,15 @@
   "2fa.disable_confirm_message": "Êtes-vous sûr de vouloir désactiver l'authentification à deux facteurs sur votre profile ?",
   "2fa.successfully_disabled_from_pr": "Authentification à deux facteurs désactivée",
   "2fa.copied": "Copié",
-  "2fa.backup_codes_message": "Avec l'2FA activé sur votre compte, vous avez besoin de codes de sauvegarde dans le cas où vous perdez votre appareil. Sans votre appareil et vos codes de sauvegardes, vous devrez contacter un administrateur Daikoku pour retrouver vos accès.",
+  "2fa.backup_codes_message": "Avec la 2FA activé sur votre compte, vous avez besoin de codes de sauvegarde dans le cas où vous perdez votre appareil. Sans votre appareil et vos codes de sauvegardes, vous devrez contacter un administrateur Daikoku pour retrouver vos accès.",
   "2fa.advice_scan": "Ouvrez votre application d'authentification (comme Authy) et scannez ce QR code.",
   "2fa.advice_enter_manually": "... Ou entrez le code manuellement (sans taper les espaces).",
   "2fa.enter_6_digits": "Une fois le QR code scanné, un code de 6 chiffres va apparaitre.",
   "2fa.enter_a_code": "Entrez le code provenant de votre application 2FA pour valider que tout fonctionne.",
   "2fa.complete_registration": "Compléter l'activation",
   "2fa": "Authentification à deux facteurs (2FA)",
-  "2fa.disable_action": "Désactiver l'2FA",
-  "2fa.enable_action": "Activer l'2FA",
+  "2fa.disable_action": "Désactiver la 2FA",
+  "2fa.enable_action": "Activer la 2FA",
   "2fa.backup_codes": "Codes de sauvegarde",
   "2fa.qrcode": "QRCode généré",
   "2fa.confirm": "Confirmer",
@@ -962,5 +962,18 @@
   "mailing_internalization.go_to_edit_template": "Editer le modèle de mails",
   "tenant_edit.translation_mode_message": "Vous pouvez à présent naviguer sur les pages et survoler chaque élement pour modifier leur texte",
   "Translation mode enabled": "Mode traduction activé",
-  "Search translation": "Rechercher une traduction"
+  "Search translation": "Rechercher une traduction",
+  "profile.security.oldPassword": "Ancien mots de passe",
+  "profile.security.newPassword": "Nouveau mots de passe",
+  "profile.security.confirmPassword": "Confirmation du mots de passe",
+  "profile.security.updatePassword": "Mettre à jour le mots de passe",
+  "constraints.required.name": "Le nom est requis",
+  "constraints.required.email": "L'adresse email est requis",
+  "constraints.required.password": "Le mots de passe est requis",
+  "constraints.required.oldPassword": "L'ancien mots de passe est requis",
+  "constraints.required.newPassword": "Le nouveau mots de passe est requis",
+  "constraints.required.confirmPassword": "Le mots de passe de confirmation est requis",
+  "constraints.format.url": "%s doit être une URL valide",
+  "constraint.matches.password": "Votre mots de passe doit avoir 8 lettres min. et contenir au moins une lettre capitale, un nombre et un caractère spéciale.",
+  "constraint.oneof.confirm.password": "La confirmation du mots de passe doit être identique au mots de passe"
 }
