--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -72,12 +72,9 @@
         "p": "unread notifications"
     },
     "Update team": "Update team",
-    "Team Apis": "Team Apis",
-    "Team Income": "Team Income",
-    "Team api keys": "Team api keys",
-    "Team billing": "Team billing",
-    "Team members": "Team members",
-    "Team assets": "Team assets",
+    "api keys": "Api keys",
+    "Members": "Members",
+    "Assets": "Assets",
     "Type the password": "Type the password",
     "Re-type the password": "Re-type the password",
     "Change my password": "Change my password",
@@ -903,7 +900,7 @@
     "audittrail.export.label": "Export audit trail",
     "Authorized entities": "Authorized entities",
     "Authorized.entities.placeholder": "Select Otoroshi service groups and/or services",
-    "teamapi.new_version": "Create a new version",
+    "teamapi.new_version": "New version",
     "authorized.entities.help": "Select otoroshi service groups and/or services on which the key is authorized",
     "apikey_select_modal.title": "Get an api key",
     "apikey_select_modal.select_your_api_key": "Select your api key to extend",
