--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -961,5 +961,11 @@
   "mailing_internalization.go_to_edit_template": "Editer le modèle de mails",
   "tenant_edit.translation_mode_message": "Vous pouvez à présent naviguer sur les pages et survoler chaque élement pour modifier leur texte",
   "Translation mode enabled": "Mode traduction activé",
-  "Search translation": "Rechercher une traduction"
+  "Search translation": "Rechercher une traduction",
+  "Authorized PerSec": "Autorisés par sec",
+  "Remaining PerSec": "Restants cette sec",
+  "Authorized PerDay": "Autorisés par jour",
+  "Remaining PerDay": "Restants ce jour",
+  "Authorized PerMonth": "Autorisés par mois",
+  "Remaining PerMonth": "Restants ce mois"
 }
