--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -961,5 +961,8 @@
     "mailing_internalization.go_to_edit_template": "Edit mail template",
     "tenant_edit.translation_mode_message": "You can now navigate and edit all elements just by hovering it",
     "Translation mode enabled": "Translation mode enabled",
-    "Search translation": "Search translation"
+    "Search translation": "Search translation",
+    "SEO": "SEO",
+    "Robot.txt.label": "Robot.txt content",
+    "Robot.txt.content": "the content of the Robot.txt file serve by Daikoku"
 }
