--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -961,5 +961,8 @@
   "mailing_internalization.go_to_edit_template": "Editer le modèle de mails",
   "tenant_edit.translation_mode_message": "Vous pouvez à présent naviguer sur les pages et survoler chaque élement pour modifier leur texte",
   "Translation mode enabled": "Mode traduction activé",
-  "Search translation": "Rechercher une traduction"
+  "Search translation": "Rechercher une traduction",
+  "SEO": "SEO",
+  "Robot.txt.label": "Contenu  du Robot.txt",
+  "Robot.txt.content": "Le contenu du fichier Robot.txt file servi par Daikoku"
 }
