--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -964,5 +964,6 @@
     "Search translation": "Search translation",
     "SEO": "SEO",
     "Robot.txt.label": "Robot.txt content",
-    "Robot.txt.content": "the content of the Robot.txt file serve by Daikoku"
+    "Robot.txt.content": "the content of the Robot.txt file serve by Daikoku",
+    "Mode": "Mode"
 }
