--- a/manual/src/main/paradox/tenantusage/1.5-initialize.md
+++ b/manual/src/main/paradox/tenantusage/1.5-initialize.md
@@ -20,24 +20,24 @@ You have to choose a team to admin the crated API. If the team doesn't exist, yo
 Your action is just, for the moment, to tack the api to create, the creation will be effective later.  
 _notice: Every choice you make are saved on your local storage in case of problem._
 
-## Recap and creation
+## [Services] Recap and creation
 
 The next screen list all API to create. If your agree with this, you can click on the `create` button to launch the APIs creation.
 
-## Select Service group to import
+## Select API keys to import
 
-You have to choose which apikeys you want to import.
-You have to choose an api with a plan and a team for every apikeys. If the plan does't exists, you can create a plan in this screen (_notice: it will a FreePlan but you can change it after creation_).  
+You have to choose which API keys you want to import.
+You have to choose an API with a plan and a team for every API keys. If the plan does't exists, you can create a plan in this screen (_notice: it will a FreePlan but you can change it after creation_).  
 If the team doesn't exist, you can create a team in this screen.
-Your action is just, for the moment, to stack the apikey to create, the creation will be effective later.  
+Your action is just, for the moment, to stack the API key to create, the creation will be effective later.  
 _notice: Every choice you make are saved on your local storage in case of problem._
 
-## Recap and creation
+## [Subscriptions] Recap and creation
 
 The next screen list all subscriptions to create. If your agree with this, you can click on the create button to launch the subscriptios creation.
 
 ## Done
 
-All the selected APIs and apikeys are created. You have certainly to go to API page to update some informations because APIs are just created with default informations, just name and plan.
+All the selected APIs and API keys are created. You have certainly to go to API page to update some informations because APIs are just created with default informations, just name and plan.
 If you have created some teams, be aware that you are the only member of those teams.
-You can import APIS and apikeys from another Otorshi instance if you wish.
+You can import APIS and API keys from another Otorshi instance if you wish.
