--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -963,5 +963,7 @@
     "Robot.txt.label": "Robot.txt content",
     "Robot.txt.content": "the content of the Robot.txt file serve by Daikoku",
     "Mode": "Mode",
-    "ldap.namefields.help": "username is built by concatenating the provided ldap fields"
+    "ldap.namefields.help": "username is built by concatenating the provided ldap fields",
+    "Go home": "Go home",
+    "notification.accept.on_error.title": "Unable to accept the notification"
 }
