--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -968,5 +968,6 @@
   "Mode": "Mode",
   "ldap.namefields.help": "le nom d'utilisateur est construit en concaténant les champs ldap fournis",
   "Go home": "Retourner à l'accueil",
-  "notification.accept.on_error.title": "Impossible d'accepter la notification"
+  "notification.accept.on_error.title": "Impossible d'accepter la notification",
+  "You're not authorized on this api": "Vous n'êtes pas autorisé à accéder à cette API"
 }
