--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -966,5 +966,6 @@
     "ldap.namefields.help": "username is built by concatenating the provided ldap fields",
     "Go home": "Go home",
     "notification.accept.on_error.title": "Unable to accept the notification",
-    "You're not authorized on this api": "You're not authorized on this api"
+    "You're not authorized on this api": "You're not authorized on this api",
+    "ask.api.access.info": "Your request for access to %s has been sent."
 }
