--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -969,5 +969,6 @@
   "ldap.namefields.help": "le nom d'utilisateur est construit en concaténant les champs ldap fournis",
   "Go home": "Retourner à l'accueil",
   "notification.accept.on_error.title": "Impossible d'accepter la notification",
-  "You're not authorized on this api": "Vous n'êtes pas autorisé à accéder à cette API"
+  "You're not authorized on this api": "Vous n'êtes pas autorisé à accéder à cette API",
+  "ask.api.access.info": "Votre demande d'accès à %s à bien été envoyée."
 }
