--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -982,5 +982,8 @@
     "Go home": "Go home",
     "notification.accept.on_error.title": "Unable to accept the notification",
     "You're not authorized on this api": "You're not authorized on this api",
-    "ask.api.access.info": "Your request for access to %s has been sent."
+    "ask.api.access.info": "Your request for access to %s has been sent.",
+    "updated password can't be saved": "Updated password can't be saved",
+    "incorrect password": "Incorrect password"
+
 }
