--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -970,5 +970,6 @@
   "Go home": "Retourner à l'accueil",
   "notification.accept.on_error.title": "Impossible d'accepter la notification",
   "You're not authorized on this api": "Vous n'êtes pas autorisé à accéder à cette API",
-  "ask.api.access.info": "Votre demande d'accès à %s à bien été envoyée."
+  "ask.api.access.info": "Votre demande d'accès à %s à bien été envoyée.",
+  "daikokuapp.pages_title": "Edition des pages"
 }
