--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -972,7 +972,7 @@
     "constraints.required.confirmPassword": "Confirm password is required",
     "constraints.format.url": "%s must be a valid URL",
     "constraints.matches.email": "Your mail must be a valid Email address",
-    "constraint.matches.password": "Your password must have 8 letters min with Capital, number and special caracter",
+    "constraint.matches.password": "Your password must have 8 letters min with capital, number and special character (#$^+=!*()@%&)",
     "constraint.oneof.confirm.password": "confirm and password must be equal",
     "constraints.test.password": "wrong password",
     "SEO": "SEO",
