redirect user on home cms page

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -274,7 +274,7 @@
     "Audit trail (Kafka)": "Audit trail (Kafka)",
     "Alerting": "Alerting",
     "Bucket": "Bucket",
-    "Unlogged home description": "Unlogged home description",
+    "tenant_edit.cms_pages": "Personalized home pages",
     "Session max. age": "Session max. age",
     "Second": {
         "s": "Second",
